<?xml version="1.0"?>
<package>
  <name>kalman_filter</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">bakui</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <kalman_filter plugin="${prefix}/kf_plugins.xml" />
  </export>
</package>
